Automatically backed up by Learn

--- a/main.css
+++ b/main.css
@@ -12,3 +12,21 @@ div {
 #red {
   border-top-color: #f00;
 }
+#orange {
+  border-top-color: #f00;
+}
+#yellow {
+  border-top-color: #f00;
+}
+#green {
+  border-top-color: #f00;
+}
+#blue {
+  border-top-color: #f00;
+}
+#indigo {
+  border-top-color: #f00;
+}
+#violet {
+  border-top-color: #f00;
+}
